@@ -44,9 +44,12 @@ Extension modules
 Library
 -------
 
+- patch #675551: Add get_history_item and replace_history_item functions
+  to the readline module.
+
 - bug #989672: pdb.doc and the help messages for the help_d and help_u methods
-of the pdb.Pdb class gives have been corrected. d(own) goes to a newer frame,
-u(p) to an older frame, not the other way around.
+  of the pdb.Pdb class gives have been corrected. d(own) goes to a newer
+  frame, u(p) to an older frame, not the other way around.
 
 - bug #990669: os.path.realpath() will resolve symlinks before normalizing the
   path, as normalizing the path may alter the meaning of the path if it
@@ -81,6 +84,9 @@ Build
 
 - The --with-tsc flag to configure to enable VM profiling with the
   processor's timestamp counter now works on PPC platforms.
+
+- patch #1006629: Define _XOPEN_SOURCE to 500 on Solaris 8/9 to match
+  GCC's definition and avoid redefinition warnings.
 
 C API
 -----
